--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.115.13",
     "mcp-server>=0.1.4",
+    "python-dotenv>=1.1.1",
     "requests>=2.32.4",
     "uvicorn[standard]>=0.34.3",
     "yfinance>=0.2.63",
